fixed nav functionality, the nav link wont flicker the viiew on nav click now.

--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -199,6 +199,12 @@ body
   padding-bottom: 7px
 .about-me
   padding-bottom: 30px
+  background-color: lighten(#FC860A,45%)
   div
     font-size: 20px
     font-weight: 400
+.about-me-bg
+
+.footer-section
+  a
+    color: darken(#808080, 35%)
